<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="30sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="259dp"
            android:contentDescription="@string/calcimage"
            app:srcCompat="@drawable/noseq"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="105dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n1text"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="364dp"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/n1hint"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="390dp"
            android:layout_marginStart="10dp"
            android:height="50dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n2text"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="445dp"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/num2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/n2hint"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="474dp"
            android:layout_marginStart="10dp"
            android:height="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/sumar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/sum"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="520dp"
                android:layout_marginEnd="5dp" />

            <Button
                android:id="@+id/restar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/rest"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="214dp"
                tools:layout_editor_absoluteY="520dp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/multi"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/mult"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="570dp"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/div"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="216dp"
                tools:layout_editor_absoluteY="570dp" />

        </LinearLayout>



        <TextView
            android:id="@+id/textView3"
            android:layout_width="107dp"
            android:layout_height="26dp"
            android:text="@string/result"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="620dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="350dp"
            android:layout_height="47dp"
            android:textSize="34sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="646dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>


    </LinearLayout>
</layout>